@@ -1338,10 +1338,7 @@
 										<child>
 											<object class="GtkLabel" id="mw_stack_label">
 												<property name="selectable">True</property>
-												<property name="label">00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
-00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
-00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
-00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00</property>
+												<property name="label">(Empty)</property>
 											</object>
 										</child>
 									</object>
